# python-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: check.yml  coverage.yml  linter.yml  tests.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  db.sqlite3  my_mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: labels.html
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/: statuses.html
task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_executor.py  0003_task_label.py  0004_rename_label_task_labels.py  0005_alter_task_labels.py  0006_alter_task_description.py  0007_alter_task_executor.py  0008_alter_task_executor.py  0009_alter_task_executor.py  0010_alter_task_author_alter_task_description_and_more.py  0011_alter_task_author.py
task_manager/templates/: base.html  index.html  login.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html  delete.html  form.html  index.html
(+8 files in other folders)
