[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evchik <elcric66@gmail.com>"]

[tool.poetry.dependencies]
coverage = "==6.4.2"
dj-database-url = "^0.5.0"
Django = "^4.0.3"
django-bootstrap4 = "^22.1"
django-filter = "^22.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
python = "^3.8"
python-dotenv = "^0.20.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
